--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,3 +1,5 @@
+<% if session[:id].present?%>
+
 <div class="page-header">
   <h1>Add a New Transaction</h1>
 </div>
@@ -36,9 +38,16 @@
       <option value="Transportation">Transportation</option>
       <option value="Misc">Misc Purchases</option>
     </select>
-    <input name="date" type="hidden" class="form-control input-md" value="<%=Time.now.strftime("%m/%d/%Y")%>">
+    <br>
+    <label>Date of Transaction:</label>
+    <input name="date" type="date">
     <br></br>
   <button type="submit" class="btn btn-success btn-md">Submit</button>
   or
   <a href="/products">Cancel</a>
+  <input type="hidden" name="user" value="<%=session[:id]%>">
 </form>
+
+<%else%>
+  To Enter Transactions, please <a href="/login">Login</a>
+<%end%>
