--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -24,19 +24,11 @@
   <div class="form-group"> 
     <label>Enter transaction category:</label>
     <select name="category">
-      <option value="401K">401K Retirement</option>
-      <option value="Savings">Personal Savings</option>
-      <option value="Loans">Student Loans</option>
-      <option value="Rent">Rent</option>
-      <option value="Utilities">Utilities</option>
-      <option value="Cable">Cable/Internet</option>
-      <option value="Phone">Phone</option>
-      <option value="Maid">Maid/Cleaning Supplies</option>
-      <option value="Groceries">Groceries</option>
-      <option value="Dining">Dining/Eating Out</option>
-      <option value="Entertainment">Entertainment</option>
-      <option value="Transportation">Transportation</option>
-      <option value="Misc">Misc Purchases</option>
+      
+      <% Category.all.each do |category| %>
+
+        <option value="<%=category.name%>"><%=category.name%></option>
+      <% end %>
     </select>
     <br>
     <label>Date of Transaction:</label>
