--- a/app/views/accounts/budget.html.erb
+++ b/app/views/accounts/budget.html.erb
@@ -1,89 +1,100 @@
+   <% if session[:id].present?%>
    <h1>Budget <small>Set your monthly spending targets</small></h1>
 	<br></br>
 	<br></br>
 	
 	<table class="table">
 	<form action="Budget/Create"
+	<p>enter all budget allocations as percentages (e.g. enter 10% as 10)</p>
 		<tr>
+			<td colspan="4"><label>Monthly Take-home Income:</label></td>
+			<td><input type="number" name="total"></td>
+		</tr>
+		
 		<tr class="header"><td colspan="6" align="left"><strong>Savings</strong></td></tr>
 		<tr>
 			<td colspan="4" align="left">401K Retirement Fund </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-2" value="" id="theID-2" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox2" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Personal Savings </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-3" value="" id="theID-3" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox3" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Student Loans </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-4" value="" id="theID-4" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox4" size="10" maxlength="10"></td>
 		</tr>
 		<tr class="header"><td colspan="6" align="left"><strong>Home Expenses</strong></td></tr>
 		<tr>
 			<td colspan="4" align="left">Rent </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-5" value="" id="theID-5" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox5" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Utilities </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-6" value="" id="theID-6" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox6" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Cable/Internet </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-7" value="" id="theID-7" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox7" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Phone </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-8" value="" id="theID-8" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox8" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Maid/Cleaning Supplies </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-9" value="" id="theID-9" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox9" size="10" maxlength="10"></td>
 		</tr>
 		<tr class="header"><td colspan="6" align="left"><strong>Daily Living</strong></td></tr>
 		<tr>
 			<td colspan="4" align="left">Groceries </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-10" value="" id="theID-10" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox10" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Dining/Eating Out </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-11" value="" id="theID-11" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox11" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Entertainment </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-12" value="" id="theID-12" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox12" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Transportation </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-13" value="" id="theID-13" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox13" size="10" maxlength="10"></td>
 		</tr>
 		<tr>
-			<td colspan="4" align="left">Misc Purchases </td>
+			<td colspan="4" align="left">Clothes </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-14" value="" id="theID-14" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox14" size="10" maxlength="10"></td>
 		</tr>
-		<tr class="footer">
-			<td colspan="4" align="left">Total </td>
+		<tr>
+			<td colspan="4" align="left">Miscellaneous/Other </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			$<input type="text" name="inputBox-14" value="" id="theID-14" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox15" size="10" maxlength="10"></td>
 		</tr>
+		<input type="hidden" name="id" value="<%=session[:id]%>">
 		<tr><td colspan="4"><button type="submit" class="btn btn-success btn-md">Update</button></td></tr>
 		</form>
 
 
 
 	</table>
+
+	<%else%>
+		To Update your Budget, please <a href="/login">Login</a>
+	<%end%>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
