--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,8 +82,17 @@
   </div><!-- /.navbar-collapse -->
 </nav>
 
+<div class="container">
+    <% if notice.present? %>
+      <div class="alert alert-dismissable alert-success">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <%= notice %>
+      </div>
+    <% end %>
+
 <%= yield %>
 
+</div>
 </body>
 </div>
 </html>
