--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,17 @@
 
 	<% budget = Budget.find_by(:user_id => session[:id])%>
 	<p>Your current monthly income of $<%= budget.total %> is allocated as follows:</p>
+	
+	<% b=["retirement","savings","loans","rent","utilities","cable","phone","cleaning","groceries","dining","entertainment","transportation","clothes","misc"] %>
+
+	<table>
+	<% b.each do |cat|%>
+		<tr>
+		<td><%=cat%></td>
+		<td></td>
+		</tr>
+	<%end%>
+	</table>
 
 <% else %>
 	<p>You haven't yet created a monthly budget; you can do so <a href="/Budget">here</a></p>
