--- a/app/views/accounts/budget.html.erb
+++ b/app/views/accounts/budget.html.erb
@@ -3,6 +3,7 @@
 	<br></br>
 	<br></br>
 	
+	<div class="container">
 	<table class="table">
 	<form action="Budget/Create"
 	<p>enter all budget allocations as percentages (e.g. enter 10% as 10)</p>
@@ -15,74 +16,74 @@
 		<tr>
 			<td colspan="4" align="left">401K Retirement Fund </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox2" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox2" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Personal Savings </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox3" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox3" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Student Loans </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox4" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox4" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr class="header"><td colspan="6" align="left"><strong>Home Expenses</strong></td></tr>
 		<tr>
 			<td colspan="4" align="left">Rent </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox5" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox5" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Utilities </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox6" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox6" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Cable/Internet </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox7" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox7" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Phone </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox8" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox8" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Maid/Cleaning Supplies </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox9" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox9" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr class="header"><td colspan="6" align="left"><strong>Daily Living</strong></td></tr>
 		<tr>
 			<td colspan="4" align="left">Groceries </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox10" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox10" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Dining/Eating Out </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox11" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox11" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Entertainment </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox12" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox12" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Transportation </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox13" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox13" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Clothes </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox14" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox14" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<tr>
 			<td colspan="4" align="left">Miscellaneous/Other </td>
 			<td colspan="2"> <div style="display:none"><p>&nbsp;</p></div>
-			%<input type="number" name="inputBox15" size="10" maxlength="10"></td>
+			%<input type="number" name="inputBox15" size="10" maxlength="10" value="0"></td>
 		</tr>
 		<input type="hidden" name="id" value="<%=session[:id]%>">
 		<tr><td colspan="4"><button type="submit" class="btn btn-success btn-md">Update</button></td></tr>
@@ -99,3 +100,4 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    </div>
